--- a/ms.order/src/main/resources/application.yml
+++ b/ms.order/src/main/resources/application.yml
@@ -1,18 +1,23 @@
 spring:
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/usf?useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+        url: jdbc:mysql://localhost:3306/ms_order?useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true
         username: root
         password: root
 
     jpa:
         show-sql: true
+        # defer-datasource-initialization: true
+        generate-ddl: true
+        hibernate:
+            ddl-auto: create
         properties:
             hibernate:
-                format_sql: true
-                ddl-auto: create
                 dialect: org.hibernate.dialect.MySQL8Dialect
-        defer-datasource-initialization: true
+                format_sql: true
+    
+    main:
+        allow-bean-definition-overriding: true
 
 server:
     servlet:
