--- a/ms.order/pom.xml
+++ b/ms.order/pom.xml
@@ -16,6 +16,7 @@
 	<description>Order Microservices</description>
 	<properties>
 		<java.version>17</java.version>
+		<spotless.version>2.10.3</spotless.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -101,6 +102,35 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+				<version>${spotless.version}</version>
+				<configuration>
+					<formats>
+						<format>
+							<includes>
+								<include>src/*/java/**/*.java</include>
+							</includes>
+							<prettier>
+								<devDependencies>
+									<prettier>2.3.0</prettier>
+									<prettier-plugin-java>1.1.1</prettier-plugin-java>
+								</devDependencies>
+								<configFile>.prettierrc.yaml</configFile>
+							</prettier>
+						</format>
+					</formats>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<phase>compile</phase>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
