--- a/ms.order/src/main/resources/application.yml
+++ b/ms.order/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+server:
+    port: 8080
+    servlet: 
+        context-path: /api
+
 spring:
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
@@ -18,7 +23,3 @@ spring:
     
     main:
         allow-bean-definition-overriding: true
-
-server:
-    servlet:
-        context-path: /api
