--- a/ms.order/src/main/resources/application.yml
+++ b/ms.order/src/main/resources/application.yml
@@ -20,6 +20,9 @@ spring:
             hibernate:
                 dialect: org.hibernate.dialect.MySQL8Dialect
                 format_sql: true
+
+    application:
+        name: ms.order
     
     main:
         allow-bean-definition-overriding: true
