Primeira versão do projeto

--- a/ms.order/src/main/resources/application.yml
+++ b/ms.order/src/main/resources/application.yml
@@ -12,7 +12,6 @@ spring:
 
     jpa:
         show-sql: true
-        # defer-datasource-initialization: true
         generate-ddl: true
         hibernate:
             ddl-auto: create
@@ -26,8 +25,13 @@ spring:
         producer:
             bootstrap-servers: localhost:9092
             key-serializer: org.apache.kafka.common.serialization.StringSerializer
-            value-serializer: org.apache.kafka.common.serialization.StringSerializer
-            group-id: group_id
+            value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+            properties:
+                spring:
+                    json:
+                        add:
+                            type:
+                                headers: false
 
     application:
         name: ms.order
@@ -39,7 +43,6 @@ topic:
     name:
         producer: order_history_kafka
 
-# Common Kafka Properties
 auto:
     create:
         topics:
