--- a/ms.order/src/main/resources/application.yml
+++ b/ms.order/src/main/resources/application.yml
@@ -19,6 +19,11 @@ spring:
             hibernate:
                 dialect: org.hibernate.dialect.MySQL8Dialect
                 format_sql: true
+        defer-datasource-initialization: true
+
+    sql:
+        init:
+            mode: always
     
     # Producer properties
     kafka:
